# Vnavros2setup

./: .gitignore  README.md  Setup.md
Setups/: setup_shared.sh
log/: latest_build
workspaces/f1tenth_ws/: driver.launch.py  env.sh
workspaces/f1tenth_ws/config/: vesc.yaml
workspaces/f1tenth_ws/src/ackermann_mux/config/: ackermann_mux_locks.yaml  ackermann_mux_topics.yaml
workspaces/f1tenth_ws/src/ackermann_mux/launch/: ackermann_mux_launch.py
workspaces/f1tenth_ws/src/f1tenth_teleop/: package.xml  setup.cfg  setup.py
workspaces/f1tenth_ws/src/f1tenth_teleop/config/: teleop_twist_joy.yaml
workspaces/f1tenth_ws/src/f1tenth_teleop/f1tenth_teleop/: twist_to_ackermann.py  twist_to_ackermann.py.bak
workspaces/f1tenth_ws/src/f1tenth_teleop/launch/: teleop_ackermann.launch.py  teleop_ackermann.launch.py.bak
workspaces/f1tenth_ws/src/f1tenth_teleop/resource/: f1tenth_teleop
workspaces/f1tenth_ws/src/launches/: CMakeLists.txt  package.xml
workspaces/f1tenth_ws/src/launches/config/: ack2vesc.yaml  teleop_twist_joy.yaml  vesc_driver.yaml
workspaces/f1tenth_ws/src/launches/launch/: ack2vesc.launch.py  all.launch.py  driver.launch.py  everything.launch.py  teleop.launch.py  teleop_all.launch.py  twist2ack.launch.py  vesc.launch.py  vesc_control.launch.py  vesc_driver_only.launch.py
workspaces/f1tenth_ws/src/vesc/vesc_ackermann/config/: ack2vesc.yaml
workspaces/new_f1tenth_ws/: .gitignore
workspaces/new_f1tenth_ws/src/mushr_configs/: CMakeLists.txt  package.xml
workspaces/new_f1tenth_ws/src/mushr_configs/config/: ackermann_to_vesc_7_2v.yaml  joy_teleop_fixed.yaml  vesc_4_12_mini.yaml
workspaces/new_f1tenth_ws/src/mushr_configs/launch/: mushr_teleop.launch.py
