<?xml version="1.0"?>
<package format="3">
  <name>launches</name>
  <version>0.0.1</version>
  <description>Local bring-up launch files (no CLI args).</description>
  <maintainer email="evan@example.com">Evan McCulley</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
</package>
