<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mushr_configs</name>
  <version>1.0.0</version>
  <description>MuSHR-specific configurations for VESC 4.12 Mini + 7.2V</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>f1tenth_stack</exec_depend>
  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_ackermann</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_to_ackermann</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
